--- a/frontend/src/scss/_paymentStatus.scss
+++ b/frontend/src/scss/_paymentStatus.scss
@@ -1,30 +1,19 @@
 .order_complete {
-    padding: 60px 0;
+  padding: 3rem 0;
 
-    i {
-        color: var(--theme-color);
-        font-size: 80px;
-        margin-bottom: 20px;
+  p {
+      font-size: 1rem;
+      font-weight: 500;
+  }
+
+  .heading_s1 {
+    margin-bottom: 1.2rem;
+
+    h3 {
+      font-weight: 600;
+      margin: 0;
+      text-transform: capitalize;
+      font-size: 1.5rem;
     }
-
-    i.icon-close {
-        color: red;
-        font-size: 80px;
-        margin-bottom: 20px;
-    }
-
-    p {
-        font-size: 1.6rem;
-    }
-
-    .heading_s1 {
-        margin-bottom: 2.5rem;
-
-        h3 {
-            font-weight: 600;
-            margin: 0;
-            text-transform: capitalize;
-            font-size: 2rem;
-        }
-    }
+  }
 }
