--- a/frontend/src/scss/_swalCustomization.scss
+++ b/frontend/src/scss/_swalCustomization.scss
@@ -26,11 +26,11 @@
 }
 
 .swal-button:not([disabled]):hover {
-  background-color: #eb1d27;
+  background-color: #751f8a;
 }
 
 .swal-button {
-  background-color: #eb1d27;
+  background-color: #751f8a;
 
   &:focus {
     box-shadow: none;
@@ -43,7 +43,7 @@
 }
 
 .swal-button:not([disabled]):hover {
-  background-color: #eb1d27;
+  background-color: #751f8a;
 }
 
 .swal-button--cancel:not([disabled]):hover {
