--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -1,14 +1,10 @@
-a:hover,
-a:focus {
-  color: $baseColor;
-}
 
 .link-underline {
-  box-shadow: 0 1px 0 0 #c96;
+  box-shadow: 0 1px 0 0 #751f8a;
 }
 
 .text-primary {
-  color: #c96 !important;
+  color: #751f8a !important;
 }
 
 .text-secondary {
