--- a/frontend/src/scss/includes/_skinStructure.scss
+++ b/frontend/src/scss/includes/_skinStructure.scss
@@ -1,42 +1,38 @@
 /* Skin structure */
 ::-moz-selection {
-    color: var(--select-text-font-color);
-    background-color: var(--select-text-bg-color);
+  color: var(--select-text-font-color);
+  background-color: var(--select-text-bg-color);
 }
 
 ::selection {
-    color: var(--select-text-font-color);
-    background-color: var(--select-text-bg-color);
+  color: var(--select-text-font-color);
+  background-color: var(--select-text-bg-color);
 }
 
 .bg-primary {
-    background-color: $baseColor !important;
+  background-color: $baseColor !important;
 }
 
 .bg-secondary {
-    background-color: #222 !important;
+  background-color: #222 !important;
 }
 
 a {
-    color: $LinkColor;
+  color: #751f8a;
 
-    &:hover {
-        color: #bf8040;
-    }
-
-    &:focus {
-        color: #bf8040;
-    }
+  &:hover, &:focus {
+    color: #1a1a1a;
+  }
 }
 
 .link-underline {
-    box-shadow: 0 1px 0 0 #c96;
+  box-shadow: 0 1px 0 0 #c96;
 }
 
 .text-primary {
-    color: #c96 !important;
+  color: #c96 !important;
 }
 
 .text-secondary {
-    color: #222 !important;
+  color: #222 !important;
 }
