--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -25,14 +25,13 @@
 
     a {
       display: block;
-      color: #555;
-      padding: 10px 0;
+      color: #1a1a1a;
+      padding: 8px 8px;
       font-weight: 500;
       font-size: 0.9rem;
       line-height: 1.5;
 
       &:hover {
-        background-color: #eee;
         color: var(--theme-color);
       }
     }
@@ -874,12 +873,11 @@
   .page-link {
     position: relative;
     display: block;
-    padding: 8px 14px;
-    margin-left: -1px;
+    padding: 7px 14px;
+    font-size: 0.9rem;
+    font-weight: 500;
     color: #ef2c34;
-    line-height: 1.25;
     background-color: #fff;
-    font-size: 16px;
   }
 
   .page-item.active .page-link {
@@ -887,6 +885,7 @@
     color: #fff;
     background-color: #ef2c34;
     border-color: #ef2c34;
+    box-shadow: none;
   }
 }
 
