--- a/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
+++ b/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
@@ -6,14 +6,14 @@
   border: none;
 
   .aliExpressLogo {
-    padding: 1rem;
+    padding: 0 1.5rem;
     margin: 0 auto;
   }
 
   .aliSearchFormCol {
     .aliExpressText {
       margin: 0 auto;
-      padding: 2rem 5rem 0;
+      padding: 1rem 12rem 0;
       background: #ff1616;
       border-top-right-radius: 4px;
       width: 100%;
@@ -22,7 +22,7 @@
 
 
   .ali_express_search_form {
-    padding: 0 4rem 1.2rem;
+    padding: 0 4rem 1rem;
     background: #ff1616;
     border-bottom-right-radius: 4px;
   }
