--- a/frontend/src/scss/_responsive.scss
+++ b/frontend/src/scss/_responsive.scss
@@ -138,12 +138,14 @@
 
   .aliExpressSearchBar .aliSearchFormCol {
     .aliExpressText {
-      padding: 1.5rem 0rem 0.2rem;
+      padding: 0.5rem 1rem 0;
       min-height: auto;
+      border-top-left-radius: 4px;
     }
 
     .ali_express_search_form {
-      padding: 0 1rem 1rem;
+      padding: 0 1rem 0.8rem;
+      border-bottom-left-radius: 4px;
     }
   }
 }
