--- a/frontend/src/scss/includes/_demoMinimize.scss
+++ b/frontend/src/scss/includes/_demoMinimize.scss
@@ -2,8 +2,6 @@
   .widget {
     padding-bottom: 2.5rem;
     margin-bottom: 3rem;
-    padding-left: .8rem;
-    padding-right: .8rem;
   }
 
   .widget-title {
@@ -179,13 +177,11 @@
 }
 
 .cat-block-title {
-  color: #555;
-  font-weight: 400;
-  font-size: 1.2rem;
-  letter-spacing: 0;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  transition: color .35s ease;
+  color: #1a1a1a;
+  font-weight: 500;
+  font-size: 1rem;
+  margin: 1rem 0;
+  transition: color 0.35s ease;
 }
 
 .cat-block {
