--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -1045,8 +1045,26 @@
   }
 }
 
+.video_thumb{
+  display: block;
+  .videoPlayerIcon {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.35);
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    text-align: center;
+    font-size: 2.3rem;
+    padding: 0.8rem 0;
+    border-radius: 4px;
 
+    i {
+      color: #fff;
+    }
+  }
 
+}
 
 
 
