--- a/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
+++ b/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
@@ -19,35 +19,64 @@
       width: 100%;
     }
   }
+}
 
+
+.ali_express_search_form {
+  padding: 0 4rem 1rem;
+  background: #ff1616;
+  border-bottom-right-radius: 4px;
+}
+
+.form-control {
+  height: 40px;
+  padding: 10px 9px 10px 15px;
+  border: 1px solid #751f8a;
+  font-size: 0.9rem;
+  border-radius: 4px;
+}
+
+.btn-search {
+  background-color: #751f8a;
+  color: #fff;
+  font-size: 1.2rem;
+
+  &:hover {
+    background-color: #751f8a;
+  }
+
+  &:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 0 2rem;
+  }
+}
+
+.controlAliSearchForm {
+  background-color: #ff1616;
+  padding-top: 10px;
+  border-radius: 4px;
 
   .ali_express_search_form {
-    padding: 0 4rem 1rem;
-    background: #ff1616;
-    border-bottom-right-radius: 4px;
+    padding: 0.5rem 0.5rem 1rem;
   }
+}
 
-  .form-control {
-    height: 40px;
-    padding: 10px 9px 10px 15px;
-    border: 1px solid #751f8a;
-    font-size: 0.9rem;
-    border-radius: 4px;
-  }
 
-  .btn-search {
-    background-color: #751f8a;
-    color: #fff;
-    font-size: 1.2rem;
-
-    &:hover {
-      background-color: #751f8a;
+/* -------------------------------------------------
+  max-width: 480px
+---------------------------------------------------*/
+@media only screen and (min-width: 768px) {
+  .controlAliSearchForm {
+    width: 70%;
+    margin: 0 auto;
+    img{
+      margin: 0 auto;
+      width: 50%;
     }
 
-    &:last-child {
-      border-top-right-radius: 4px;
-      border-bottom-right-radius: 4px;
-      padding: 0 2rem;
+    .ali_express_search_form {
+      padding: 0.5rem 1rem 1rem;
     }
   }
 }
