bd shipping missing, process validation fix

--- a/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
+++ b/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
@@ -31,7 +31,7 @@
 .form-control {
   height: 40px;
   padding: 10px 9px 10px 15px;
-  border: 1px solid #751f8a;
+  border: 1px solid #ef2c34;
   font-size: 0.9rem;
   border-radius: 4px;
 }
