--- a/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
+++ b/frontend/src/scss/aliexpress/_aliExpressSearchBar.scss
@@ -39,16 +39,16 @@
 .btn-search {
   background-color: #751f8a;
   color: #fff;
-  font-size: 1.2rem;
 
-  &:hover {
+  &:hover,
+  &:focus {
+    color: #fff;
     background-color: #751f8a;
   }
 
   &:last-child {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    padding: 0 2rem;
   }
 }
 
@@ -62,21 +62,42 @@
   }
 }
 
+.seller_page_title {
+  h1 {
+    color: #751f8a;
+    font-weight: 700;
+  }
+}
+
 
 /* -------------------------------------------------
-  max-width: 480px
+  min-width: 768
 ---------------------------------------------------*/
 @media only screen and (min-width: 768px) {
   .controlAliSearchForm {
     width: 70%;
     margin: 0 auto;
-    img{
+
+    img {
       margin: 0 auto;
       width: 50%;
     }
 
     .ali_express_search_form {
       padding: 0.5rem 1rem 1rem;
+    }
+  }
+}
+
+
+/* -------------------------------------------------
+  max-width: 480px
+---------------------------------------------------*/
+@media only screen and (max-width: 768px) {
+  .seller_page_title {
+    h1 {
+      font-size: 1.4rem;
+      margin: 0;
     }
   }
 }
