--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -1145,13 +1145,18 @@
       opacity: 0.9;
     }
   }
+  .modal-body{
+    img{
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+    }
+  }
   .modalAgreeButton{
-    position: absolute;
-    bottom: 20px;
-    left: auto;
-    right: auto;
     text-align: center;
-    width: 100%;
+    background: #fff;
+    padding: 25px 0;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
 }
 
@@ -1160,6 +1165,20 @@
 }
 
 
+.desktop_messenger{
+  position: fixed;
+  right: 30px;
+  bottom: 40px;
+  .nav-link{
+    color: #ec1c24;
+    &:hover, &:focus{
+      color: #751f8a;
+    }
+  }
+  .sticky_nav_icon{
+    font-size: 3rem;
+  }
+}
 
 
 
