--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -1158,17 +1158,17 @@
 
   .modal-body {
     img {
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
+      border-radius: 4px;
     }
   }
 
   .modalAgreeButton {
     text-align: center;
-    background: #fff;
-    padding: 25px 0;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    background: transparent;
+    position: absolute;
+    bottom: 1.2rem;
+    left: 0;
+    right: 0;
   }
 }
 
@@ -1224,6 +1224,20 @@
   }
 }
 
+
+.intro-slider-container{
+  .tns-outer .tns-nav{
+    margin: 0;
+    position: absolute;
+    bottom: 15px;
+    z-index: 99;
+    left: 0;
+    right: 0;
+  }
+  .tns-controls{
+    display: none;
+  }
+}
 
 
 
