--- a/frontend/public/assets/plugins/fontello/css/fontello-codes.css
+++ b/frontend/public/assets/plugins/fontello/css/fontello-codes.css
@@ -55,7 +55,8 @@
 .icon-right-open-1:before { content: '\e832'; } /* '' */
 .icon-up-open-1:before { content: '\e833'; } /* '' */
 .icon-spin4:before { content: '\e834'; } /* '' */
-.icon-shop:before { content: '\e834'; } /* '' */
+.icon-shop:before { content: '\e835'; } /* '' */
+.icon-play-circle:before { content: '\e836'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-down-open-1:before { content: '\f004'; } /* '' */
 .icon-up-open:before { content: '\f005'; } /* '' */
