--- a/frontend/public/assets/plugins/fontello/css/fontello.css
+++ b/frontend/public/assets/plugins/fontello/css/fontello.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?21747589');
-  src: url('../font/fontello.eot?21747589#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?21747589') format('woff2'),
-       url('../font/fontello.woff?21747589') format('woff'),
-       url('../font/fontello.ttf?21747589') format('truetype'),
-       url('../font/fontello.svg?21747589#fontello') format('svg');
+  src: url('../font/fontello.eot?68483502');
+  src: url('../font/fontello.eot?68483502#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?68483502') format('woff2'),
+       url('../font/fontello.woff?68483502') format('woff'),
+       url('../font/fontello.ttf?68483502') format('truetype'),
+       url('../font/fontello.svg?68483502#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?21747589#fontello') format('svg');
+    src: url('../font/fontello.svg?68483502#fontello') format('svg');
   }
 }
 */
@@ -110,7 +110,8 @@
 .icon-right-open-1:before { content: '\e832'; } /* '' */
 .icon-up-open-1:before { content: '\e833'; } /* '' */
 .icon-spin4:before { content: '\e834'; } /* '' */
-.icon-shop:before { content: '\e834'; } /* '' */
+.icon-shop:before { content: '\e835'; } /* '' */
+.icon-play-circle:before { content: '\e836'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-down-open-1:before { content: '\f004'; } /* '' */
 .icon-up-open:before { content: '\f005'; } /* '' */
