--- a/frontend/public/assets/plugins/fontello/css/fontello.css
+++ b/frontend/public/assets/plugins/fontello/css/fontello.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?68483502');
-  src: url('../font/fontello.eot?68483502#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?68483502') format('woff2'),
-       url('../font/fontello.woff?68483502') format('woff'),
-       url('../font/fontello.ttf?68483502') format('truetype'),
-       url('../font/fontello.svg?68483502#fontello') format('svg');
+  src: url('../font/fontello.eot?31676845');
+  src: url('../font/fontello.eot?31676845#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?31676845') format('woff2'),
+       url('../font/fontello.woff?31676845') format('woff'),
+       url('../font/fontello.ttf?31676845') format('truetype'),
+       url('../font/fontello.svg?31676845#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?68483502#fontello') format('svg');
+    src: url('../font/fontello.svg?31676845#fontello') format('svg');
   }
 }
 */
@@ -126,6 +126,7 @@
 .icon-check-empty:before { content: '\f096'; } /* '' */
 .icon-docs:before { content: '\f0c5'; } /* '' */
 .icon-chat-empty:before { content: '\f0e6'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
 .icon-angle-left:before { content: '\f104'; } /* '' */
 .icon-angle-right:before { content: '\f105'; } /* '' */
 .icon-circle-empty:before { content: '\f10c'; } /* '' */
