--- a/backend/public/assets/plugins/fontello/css/fontello-codes.css
+++ b/backend/public/assets/plugins/fontello/css/fontello-codes.css
@@ -46,6 +46,8 @@
 .icon-star:before { content: '\e829'; } /* '' */
 .icon-pencil:before { content: '\e82a'; } /* '' */
 .icon-edit:before { content: '\e82b'; } /* '' */
+.icon-heart-2:before { content: '\e82c'; } /* '' */
+.icon-heart-3:before { content: '\e82d'; } /* '' */
 .icon-up-open-mini:before { content: '\e82f'; } /* '' */
 .icon-down-open:before { content: '\e830'; } /* '' */
 .icon-left-open-1:before { content: '\e831'; } /* '' */
