--- a/backend/public/assets/plugins/fontello/css/fontello.css
+++ b/backend/public/assets/plugins/fontello/css/fontello.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?42213014');
-  src: url('../font/fontello.eot?42213014#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?42213014') format('woff2'),
-       url('../font/fontello.woff?42213014') format('woff'),
-       url('../font/fontello.ttf?42213014') format('truetype'),
-       url('../font/fontello.svg?42213014#fontello') format('svg');
+  src: url('../font/fontello.eot?51076520');
+  src: url('../font/fontello.eot?51076520#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?51076520') format('woff2'),
+       url('../font/fontello.woff?51076520') format('woff'),
+       url('../font/fontello.ttf?51076520') format('truetype'),
+       url('../font/fontello.svg?51076520#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?42213014#fontello') format('svg');
+    src: url('../font/fontello.svg?51076520#fontello') format('svg');
   }
 }
 */
@@ -101,6 +101,8 @@
 .icon-star:before { content: '\e829'; } /* '' */
 .icon-pencil:before { content: '\e82a'; } /* '' */
 .icon-edit:before { content: '\e82b'; } /* '' */
+.icon-heart-2:before { content: '\e82c'; } /* '' */
+.icon-heart-3:before { content: '\e82d'; } /* '' */
 .icon-up-open-mini:before { content: '\e82f'; } /* '' */
 .icon-down-open:before { content: '\e830'; } /* '' */
 .icon-left-open-1:before { content: '\e831'; } /* '' */
