--- a/frontend/public/assets/plugins/fontello/css/fontello.css
+++ b/frontend/public/assets/plugins/fontello/css/fontello.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?31676845');
-  src: url('../font/fontello.eot?31676845#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?31676845') format('woff2'),
-       url('../font/fontello.woff?31676845') format('woff'),
-       url('../font/fontello.ttf?31676845') format('truetype'),
-       url('../font/fontello.svg?31676845#fontello') format('svg');
+  src: url('../font/fontello.eot?51076520');
+  src: url('../font/fontello.eot?51076520#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?51076520') format('woff2'),
+       url('../font/fontello.woff?51076520') format('woff'),
+       url('../font/fontello.ttf?51076520') format('truetype'),
+       url('../font/fontello.svg?51076520#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?31676845#fontello') format('svg');
+    src: url('../font/fontello.svg?51076520#fontello') format('svg');
   }
 }
 */
@@ -101,17 +101,14 @@
 .icon-star:before { content: '\e829'; } /* '' */
 .icon-pencil:before { content: '\e82a'; } /* '' */
 .icon-edit:before { content: '\e82b'; } /* '' */
-.icon-headset:before { content: '\e82c'; } /* '' */
-.icon-messenger:before { content: '\e82d'; } /* '' */
-.icon-shop-window:before { content: '\e82e'; } /* '' */
+.icon-heart-2:before { content: '\e82c'; } /* '' */
+.icon-heart-3:before { content: '\e82d'; } /* '' */
 .icon-up-open-mini:before { content: '\e82f'; } /* '' */
 .icon-down-open:before { content: '\e830'; } /* '' */
 .icon-left-open-1:before { content: '\e831'; } /* '' */
 .icon-right-open-1:before { content: '\e832'; } /* '' */
 .icon-up-open-1:before { content: '\e833'; } /* '' */
 .icon-spin4:before { content: '\e834'; } /* '' */
-.icon-shop:before { content: '\e835'; } /* '' */
-.icon-play-circle:before { content: '\e836'; } /* '' */
 .icon-spin6:before { content: '\e839'; } /* '' */
 .icon-down-open-1:before { content: '\f004'; } /* '' */
 .icon-up-open:before { content: '\f005'; } /* '' */
@@ -126,7 +123,6 @@
 .icon-check-empty:before { content: '\f096'; } /* '' */
 .icon-docs:before { content: '\f0c5'; } /* '' */
 .icon-chat-empty:before { content: '\f0e6'; } /* '' */
-.icon-doc-text:before { content: '\f0f6'; } /* '' */
 .icon-angle-left:before { content: '\f104'; } /* '' */
 .icon-angle-right:before { content: '\f105'; } /* '' */
 .icon-circle-empty:before { content: '\f10c'; } /* '' */
