--- a/frontend/src/scss/_responsive.scss
+++ b/frontend/src/scss/_responsive.scss
@@ -44,27 +44,30 @@
   max-width: 991px
 ---------------------------------------------------*/
 @media only screen and (max-width: 991px) {
-
-  .h1, h1 {
+  .h1,
+  h1 {
     font-size: 2rem;
   }
-  .h2, h2 {
+  .h2,
+  h2 {
     font-size: 1.5rem;
   }
-  .h3, h3 {
+  .h3,
+  h3 {
     font-size: 1.3rem;
   }
-  .h4, h4 {
+  .h4,
+  h4 {
     font-size: 1.1rem;
   }
-  .h5, h5 {
+  .h5,
+  h5 {
     font-size: 1rem;
   }
-  .h6, h6 {
+  .h6,
+  h6 {
     font-size: 0.9rem;
   }
-
-
 }
 
 /* -------------------------------------------------
@@ -101,11 +104,10 @@
     font-size: 2rem;
   }
 
-
   .single-product-title {
     font-size: 1.1rem;
     line-height: 1.3;
-    color: #751F8A;
+    color: #751f8a;
   }
 }
 
