--- a/frontend/public/assets/plugins/fontello/css/fontello-codes.css
+++ b/frontend/public/assets/plugins/fontello/css/fontello-codes.css
@@ -3,7 +3,9 @@
 .icon-heart-1:before { content: '\2605'; } /* '★' */
 .icon-shopping-bag:before { content: '\2661'; } /* '♡' */
 .icon-heart-empty:before { content: '\e800'; } /* '' */
+.icon-ch-truck-2:before { content: '\e800'; } /* '' */
 .icon-ok:before { content: '\e801'; } /* '' */
+.icon-ch-truck:before { content: '\e801'; } /* '' */
 .icon-search:before { content: '\e802'; } /* '' */
 .icon-mail:before { content: '\e803'; } /* '' */
 .icon-ok-circled:before { content: '\e804'; } /* '' */
