--- a/frontend/public/assets/plugins/fontello/css/fontello.css
+++ b/frontend/public/assets/plugins/fontello/css/fontello.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?63778129');
-  src: url('../font/fontello.eot?63778129#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?63778129') format('woff2'),
-       url('../font/fontello.woff?63778129') format('woff'),
-       url('../font/fontello.ttf?63778129') format('truetype'),
-       url('../font/fontello.svg?63778129#fontello') format('svg');
+  src: url('../font/fontello.eot?11950982');
+  src: url('../font/fontello.eot?11950982#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?11950982') format('woff2'),
+       url('../font/fontello.woff?11950982') format('woff'),
+       url('../font/fontello.ttf?11950982') format('truetype'),
+       url('../font/fontello.svg?11950982#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?63778129#fontello') format('svg');
+    src: url('../font/fontello.svg?11950982#fontello') format('svg');
   }
 }
 */
@@ -58,7 +58,9 @@
 .icon-heart-1:before { content: '\2605'; } /* '★' */
 .icon-shopping-bag:before { content: '\2661'; } /* '♡' */
 .icon-heart-empty:before { content: '\e800'; } /* '' */
+.icon-ch-truck-2:before { content: '\e800'; } /* '' */
 .icon-ok:before { content: '\e801'; } /* '' */
+.icon-ch-truck:before { content: '\e801'; } /* '' */
 .icon-search:before { content: '\e802'; } /* '' */
 .icon-mail:before { content: '\e803'; } /* '' */
 .icon-ok-circled:before { content: '\e804'; } /* '' */
