--- a/frontend/src/layouts/admin/less/Admin.less
+++ b/frontend/src/layouts/admin/less/Admin.less
@@ -1,3 +1,4 @@
-@import '~antd/dist/antd.less';
+@import "./default.less";
+@import "~antd/dist/antd.less";
 
-@import './extend.less';
+@import "./extend.less";
