--- a/frontend/src/layouts/admin/less/extend.less
+++ b/frontend/src/layouts/admin/less/extend.less
@@ -1,11 +1,9 @@
-
 .ant-layout-sider-children {
-
   .logo {
     background: #fff;
     margin: 0;
     padding: 10px 0;
-    img{
+    img {
       height: 46px;
       margin: 0 auto;
     }
@@ -24,4 +22,12 @@
 
 .site-layout .site-layout-background {
   background: #fff;
+}
+
+.ant-card {
+  margin-bottom: 30px;
+}
+
+.ant-statistic-content-prefix {
+  font-family: "Times New Roman", Times, serif;
 }
