wallet dev progress and taobao image gallery update

--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -122,6 +122,13 @@
   }
 }
 
+.stick_footer_nav  {
+  &.stick_add_to_cart_nav{
+    z-index: 9999;
+    box-shadow: none;
+  }
+}
+
 .mobile_header {
   padding-bottom: 10px;
 
