--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -122,8 +122,8 @@
   }
 }
 
-.stick_footer_nav  {
-  &.stick_add_to_cart_nav{
+.stick_footer_nav {
+  &.stick_add_to_cart_nav {
     z-index: 9999;
     box-shadow: none;
   }
@@ -596,6 +596,21 @@
     }
   }
 
+  .selected_qty {
+    position: absolute;
+    top: -7px;
+    right: -4px;
+    background: #ec1c24;
+    color: #fff;
+    padding: 2px 0;
+    font-size: 10px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 700;
+  }
+
   .hasImage {
     padding: 2px;
 
@@ -752,6 +767,7 @@
   .show_price {
     font-size: 1rem;
   }
+
   .delete_price {
     font-size: 1rem;
   }
@@ -1222,6 +1238,7 @@
     left: 0;
     right: 0;
   }
+
   .tns-controls {
     display: none;
   }
@@ -1261,6 +1278,7 @@
   &.active {
     color: #ff3714;
   }
+
   &:hover {
     color: #ff3714;
   }
